# iNFT-on-Solana

./: Anchor.toml  Cargo.toml  LICENSE  README.md  Readme.md
programs/interchangeable-nft/: Cargo.toml
programs/interchangeable-nft/src/: constants.rs  error.rs  events.rs  lib.rs  metadata.rs
programs/interchangeable-nft/src/processor/: admin.rs  initialize.rs  mint.rs  mod.rs  pull.rs  redeem.rs
programs/interchangeable-nft/src/state/: account.rs  collection.rs  mod.rs
programs/interchangeable-nft/src/utils/: mod.rs  payment.rs
