[package]
name = "interchangeable-nft"
version = "0.1.0"
description = "Interchangeable NFT - Solana Smart Contract"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "interchangeable_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = { workspace = true }
mpl-token-metadata = "3.2.3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = { workspace = true }
